[package]
name = "nucle"
version = "0.1.0"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A little cli-toy program of nucleo."
licence = "MIT"
keywords = ["cli", "fuzzy-search"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.2", features = ["derive"]}
crossterm = "0.27.0"
nucleo = "0.2.0"
ratatui = "0.23.0"
thiserror = "1.0.47"
tui-input = "0.8.0"
